--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "nodemon": "^1.14.6"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "bcrypt": "^3.0.7",
+    "body-parser": "^1.19.0",
     "concurrently": "^3.5.1",
     "express": "^4.16.2",
+    "moment": "^2.24.0",
+    "mysql": "^2.17.1",
     "react-router-dom": "^5.1.2"
   }
 }
