--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "axios": "^0.19.0",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
+    "client-sessions": "^0.8.0",
     "concurrently": "^3.5.1",
     "dompurify": "^2.0.7",
     "express": "^4.16.2",
+    "helmet": "^3.21.2",
     "jsdom": "^15.2.1",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "uuid": "^3.3.3"
   }
 }
