--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsdom": "^15.2.1",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
+    "react-datepicker": "^2.10.1",
     "react-router-dom": "^5.1.2",
     "uuid": "^3.3.3"
   }
