--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mysql": "^2.17.1",
     "react-datepicker": "^2.10.1",
     "react-router-dom": "^5.1.2",
+    "react-router-transition": "^2.0.0",
     "uuid": "^3.3.3"
   }
 }
