--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Starter kit for creating React and Express apps",
   "main": "server.js",
   "scripts": {
+    "build": "cd client && npm run build",
     "client-install": "cd client && npm install",
     "start": "node server.js",
     "server": "nodemon server.js",
